# RenderGraph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  appveyor.yml  vcpkg.json
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
include/RenderGraph/: Attachment.hpp  AttachmentTransition.hpp  BufferData.hpp  BufferViewData.hpp  CallStack.hpp  DotExport.hpp  Exception.hpp  FrameGraph.hpp  FrameGraphBase.hpp  FrameGraphEnums.hpp  FrameGraphFunctions.hpp  FrameGraphPrerequisites.hpp  FrameGraphStructs.hpp  FramePass.hpp  FramePassDependencies.hpp  FramePassGroup.hpp  FramePassTimer.hpp  GraphContext.hpp  GraphNode.hpp  GraphVisitor.hpp  Hash.hpp  Id.hpp  ImageCopy.hpp  ImageData.hpp  ImageViewData.hpp  LayerLayoutStatesHandler.hpp  Log.hpp  PipelinePass.hpp  PixelFormat.enum  PixelFormat.inl  RecordContext.hpp  RenderGraph.hpp  RenderGraphNode.hpp  RenderGraphPrerequisites.hpp  RenderPass.hpp  RenderPassDependencies.hpp  RenderQuad.hpp  ResourceHandler.hpp  RunnableGraph.hpp  RunnableLayoutsCache.hpp  (+4 more)
include/RenderGraph/RunnablePasses/: BufferCopy.hpp  BufferToImageCopy.hpp  ComputePass.hpp  GenerateMipmaps.hpp  ImageBlit.hpp  ImageCopy.hpp  ImageToBufferCopy.hpp  PipelineConfig.hpp  PipelineHolder.hpp  PipelinePass.hpp  RenderMesh.hpp  RenderMeshConfig.hpp  RenderMeshHolder.hpp  RenderPass.hpp  RenderPassHolder.hpp  RenderQuad.hpp  RenderQuadConfig.hpp  RenderQuadHolder.hpp
include/Utils/: DocMainPage.hpp  Utils.hpp  UtilsPch.hpp  UtilsPrerequisites.hpp  config.hpp.in
include/Utils/Align/: Aligned.hpp  AlignedMemoryAllocator.hpp  NonAlignedMemoryAllocator.hpp
include/Utils/Config/: CompilerConfig.hpp  Macros.hpp  MultiThreadConfig.hpp  PlatformConfig.hpp  SmartPtr.hpp
include/Utils/Data/: BinaryFile.hpp  BinaryFile.inl  BinaryLoader.hpp  BinaryWriter.hpp  Endianness.hpp  File.hpp  Loader.hpp  LoaderException.hpp  Path.hpp  TextFile.hpp  TextFile.inl  TextLoader.hpp  TextWriter.hpp  Writer.hpp  ZipArchive.hpp
include/Utils/Design/: ArrayView.hpp  BlockGuard.hpp  ChangeTracked.hpp  Collection.hpp  Collection.inl  DynamicBitset.hpp  DynamicBitset.inl  Factory.hpp  FlagCombination.hpp  GroupChangeTracked.hpp  Named.hpp  NonCopyable.hpp  OwnedBy.hpp  Resource.hpp  ScopeGuard.hpp  Templates.hpp  UnicityException.hpp  Unique.hpp
include/Utils/Exception/: Assertion.hpp  Exception.hpp
include/Utils/FileParser/: FileParser.hpp  FileParserContext.hpp  ParserParameter.hpp  ParserParameter.inl  ParserParameterBase.hpp  ParserParameterBase.inl  ParserParameterHelpers.hpp  ParserParameterTypeException.hpp
include/Utils/Graphics/: BoundingBox.hpp  BoundingContainer.hpp  BoundingSphere.hpp  Colour.hpp  ColourComponent.hpp  Font.hpp  FontCache.hpp  Glyph.hpp  HdrColourComponent.hpp  Image.hpp  ImageCache.hpp  Pixel.hpp  Pixel.inl  PixelBuffer.hpp  PixelBuffer.inl  PixelBufferBase.hpp  PixelFormat.hpp  PixelFormat.inl  Rectangle.hpp  RgbColour.hpp  RgbColour.inl  RgbaColour.hpp  RgbaColour.inl  UnsupportedFormatException.hpp
include/Utils/Log/: ELogType.hpp  Logger.hpp  LoggerConsole.hpp  LoggerImpl.hpp
include/Utils/Math/: Angle.hpp  Angle.inl  Coords.hpp  Coords.inl  Line2D.hpp  Line3D.hpp  Math.hpp  Matrix.hpp  Matrix.inl  PlaneEquation.hpp  Point.hpp  Point.inl  PointOperators.hpp  PointOperators.inl  Quaternion.hpp  Quaternion.inl  Range.hpp  RangedValue.hpp  Simd.hpp  Simd.inl  SphericalVertex.hpp  SquareMatrix.hpp  SquareMatrix.inl  TransformationMatrix.hpp  TransformationMatrix.inl
include/Utils/Miscellaneous/: BitSize.hpp  BlockTimer.hpp  BlockTracker.hpp  CpuInformations.hpp  Debug.hpp  DynamicLibrary.hpp  Hash.hpp  PreciseTimer.hpp  StringUtils.hpp  StringUtils.inl  Utils.hpp
include/Utils/Multithreading/: ThreadPool.hpp  WorkerThread.hpp
include/Utils/Pool/: BuddyAllocator.hpp  BuddyAllocator.inl  FixedGrowingSizeMarkedMemoryData.hpp  FixedGrowingSizeMemoryData.hpp  FixedSizeMarkedMemoryData.hpp  FixedSizeMemoryData.hpp  MemoryDataTyper.hpp  ObjectPool.hpp  PoolException.hpp  PoolManagedObject.hpp  UniqueObjectPool.hpp
include/Utils/Stream/: StreamBaseManipulators.hpp  StreamIndentBuffer.hpp  StreamIndentBufferManager.hpp  StreamIndentManipulators.hpp  StreamPrefixBuffer.hpp  StreamPrefixBufferManager.hpp  StreamPrefixManipulators.hpp
source/: CMakeLists.txt
source/RenderGraph/: Attachment.cpp  AttachmentTransition.cpp  BuilderCommon.cpp  BuilderCommon.hpp  CallStack.cpp  DotExport.cpp  FrameGraph.cpp  FrameGraph.natvis  FrameGraphPrerequisites.cpp  FramePass.cpp  FramePassDependenciesBuilder.cpp  FramePassDependenciesBuilder.hpp  FramePassGroup.cpp  FramePassTimer.cpp  GraphBuilder.cpp  GraphBuilder.hpp  GraphContext.cpp  GraphNode.cpp  ImageCopy.cpp  LayerLayoutStatesHandler.cpp  Log.cpp  PipelinePass.cpp  RecordContext.cpp  RenderGraph.cpp  RenderGraph.natvis  RenderPass.cpp  RenderPassDependenciesBuilder.cpp  RenderPassDependenciesBuilder.hpp  RenderQuad.cpp  ResourceHandler.cpp  ResourceOptimiser.cpp  ResourceOptimiser.hpp  RunnableGraph.cpp  RunnableLayoutsCache.cpp  RunnablePass.cpp
source/RenderGraph/RunnablePasses/: BufferCopy.cpp  BufferToImageCopy.cpp  ComputePass.cpp  GenerateMipmaps.cpp  ImageBlit.cpp  ImageCopy.cpp  ImageToBufferCopy.cpp  PipelineHolder.cpp  PipelinePass.cpp  RenderMesh.cpp  RenderMeshHolder.cpp  RenderPass.cpp  RenderPassHolder.cpp  RenderQuad.cpp  RenderQuadHolder.cpp
source/Utils/: UtilsPch.cpp
source/Utils/Data/: BinaryFile.cpp  File.cpp  Path.cpp  TextFile.cpp  ZipArchive.cpp
source/Utils/FileParser/: FileParser.cpp  FileParserContext.cpp  ParserParameterHelpers.cpp
source/Utils/Graphics/: BoundingBox.cpp  BoundingSphere.cpp  ColourComponent.cpp  Font.cpp  FontCache.cpp  HdrColourComponent.cpp  Image.cpp  ImageCache.cpp  PixelBufferBase.cpp  PixelFormat.cpp  Rectangle.cpp
test/: BaseTest.cpp  BaseTest.hpp  CMakeLists.txt  Common.cpp  Common.hpp  DynamicLibrary.hpp  TestAttachment.cpp  TestBases.cpp  TestRenderGraph.cpp  TestRenderPass.cpp  TestRunnablePass.cpp  Window.cpp  Window.hpp
test/Linux/: DynamicLibrary.cpp
test/Win32/: DynamicLibrary.cpp
(+37 files in other folders)
